--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10"
   }
 }
